src/test/deca/syntax/invalid/provided/UnknownInclude.deca
// DESCRIPTION : Include d'un fichier qui n'existe pas
//RESULTAT: Unknown.deca: include file not found
#include "Unknown.deca"
